Java 17 cleanup